--- a/css/grid-flex-template.css
+++ b/css/grid-flex-template.css
@@ -36,7 +36,9 @@ body * {
     grid-area: Footer; 
     border: 1px solid blueviolet;
 }
-
+h3 a {
+    color: red;
+}
 /* Flex system */
 
 .flex-container {
